crates/aven-check/tests/fixtures/check/invalid/comptime-merge-collision.av
A = { name: Text }
B = { name: Text, age: Int }
merge = (a, b) => { ..a, ..b }
Both = merge(A, B)
